pingpong-log-output/kubernetes/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pingpong-log-output-route
  namespace: exercises
spec:
  parentRefs:
    - name: pingpong-log-output-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      backendRefs:
        - name: pingpong-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /reset
      backendRefs:
        - name: pingpong-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 80
